--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>K. V. Raghul – Portfolio</title>
+
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+<!-- Font Awesome for Social Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- CSS -->
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- ===== HEADER ===== -->
 <header>
   <div class="container nav-container">
-    <h1 class="logo">K. V. Raghul</h1>
+    <div class="logo-box">
+      <h1 class="logo">K. V. Raghul</h1>
+    </div>
     <nav>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -19,36 +29,51 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#certifications">Certifications</a></li>
+        <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
-<!-- About -->
-<section id="about" class="section">
-  <div class="container about-content">
-    <div class="photo-box">
-      <img src="myphoto.jpeg" alt="Profile Photo" class="profile">
+<!-- ===== HERO ===== -->
+<section id="about" class="hero section">
+  <div class="container hero-content">
+    <div class="hero-left">
+      <img src="myphoto.jpeg" alt="Profile photo" class="profile">
     </div>
-    <div class="info-box">
-      <h2>About Me</h2>
-      <p>I am a Computer Science and Engineering student with a strong foundation in
-      <strong>Data Analytics, AI/ML, and Cloud Computing</strong>. Skilled in Python, SQL, Power BI,
-      and machine learning, I am passionate about solving real-world problems through data-driven insights.</p>
-      <a class="btn" href="resume.pdf" target="_blank">Download Resume</a>
+    <div class="hero-right">
+      <h2>Hello, I'm <span class="accent">K. V. Raghul</span></h2>
+      <p class="tagline">Data Analytics & AI/ML Enthusiast</p>
+      <p class="intro">
+        I am a Computer Science and Engineering student with a strong foundation in
+        <strong>Data Analytics, AI/ML, and Cloud Computing</strong>.
+        Skilled in Python, SQL, Power BI, and machine learning,
+        I am passionate about solving real-world problems through data-driven insights.
+      </p>
+
+      <!-- Social Icons -->
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank" aria-label="LinkedIn">
+          <i class="fab fa-linkedin" style="color: purple;"></i>
+        </a>
+        <a href="https://github.com/Raghul-07-tech" target="_blank" aria-label="GitHub">
+          <i class="fab fa-github" style="color: black;"></i>
+        </a>
+      </div>
+
+      <a href="#projects" class="btn">View My Work</a>
     </div>
   </div>
 </section>
 
-<!-- Skills -->
-<section id="skills" class="section alt">
+<!-- ===== SKILLS ===== -->
+<section id="skills" class="section">
   <div class="container">
-    <h2>Skills</h2>
-    <ul class="skill-list">
+    <h2 class="section-title">Skills</h2>
+    <ul class="grid">
       <li>Python, Java, C, C++, SQL</li>
-      <li>Data Visualization (Power BI)</li>
+      <li>Power BI, Data Visualization</li>
       <li>Machine Learning (Basics)</li>
       <li>Cloud (AWS, GCP)</li>
       <li>Flask, OpenCV</li>
@@ -58,38 +83,40 @@
   </div>
 </section>
 
-<!-- Projects -->
-<section id="projects" class="section">
+<!-- ===== PROJECTS ===== -->
+<section id="projects" class="section alt">
   <div class="container">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>HEALTHSYNC (2025)</h3>
-      <p>Cloud-based patient record management using Flask & Google Cloud.</p>
-    </div>
-    <div class="project">
-      <h3>5G User Session Management (2025)</h3>
-      <p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p>
-    </div>
-    <div class="project">
-      <h3>Borewell Rescue System (2023)</h3>
-      <p>Balloon-assisted mechanism to safely extract children from borewells.</p>
+    <h2 class="section-title">Projects</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>HEALTHSYNC (2025)</h3>
+        <p>Cloud-based patient record management using Flask & Google Cloud.</p>
+      </div>
+      <div class="card">
+        <h3>5G User Session Management (2025)</h3>
+        <p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p>
+      </div>
+      <div class="card">
+        <h3>Borewell Rescue System (2023)</h3>
+        <p>Balloon-assisted mechanism to safely extract children from borewells.</p>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- Education -->
-<section id="education" class="section alt">
+<!-- ===== EDUCATION ===== -->
+<section id="education" class="section">
   <div class="container">
-    <h2>Education</h2>
+    <h2 class="section-title">Education</h2>
     <p><strong>B.E. Computer Science & Engineering</strong> – Prince Shri Venkateshwara Padmavathy Engineering College, CGPA 8.21 (6th Sem)</p>
     <p>Class 12 – Shrishti Vidyashram Sr. Sec. School, 72.2% (2022)</p>
   </div>
 </section>
 
-<!-- Certifications -->
-<section id="certifications" class="section">
+<!-- ===== CERTIFICATIONS ===== -->
+<section id="certifications" class="section alt">
   <div class="container">
-    <h2>Certifications</h2>
+    <h2 class="section-title">Certifications</h2>
     <ul>
       <li>NPTEL: Design Thinking, Research & Innovation</li>
       <li>TCS: MasterCraft Data Plus, Career Edge</li>
@@ -99,20 +126,31 @@
   </div>
 </section>
 
-<!-- Contact -->
-<section id="contact" class="section alt">
+<!-- ===== RESUME ===== -->
+<section id="resume" class="section alt">
   <div class="container">
-    <h2>Contact</h2>
+    <h2 class="section-title">Resume</h2>
+    <p>You can view or download my detailed resume below:</p>
+    <a href="KVRaghul_Resume.pdf" target="_blank" class="btn">View / Download Resume</a>
+  </div>
+</section>
+
+<!-- ===== CONTACT ===== -->
+<section id="contact" class="section">
+  <div class="container">
+    <h2 class="section-title">Contact</h2>
     <p>Email: <a href="mailto:krishnamoorthiraghul123@gmail.com">krishnamoorthiraghul123@gmail.com</a></p>
     <p>Phone: +91-8838168911</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank">linkedin.com/in/k-v-raghul-875489340</a></p>
-    <p>GitHub: <a href="https://github.com/Raghul-07-tech" target="_blank">github.com/Raghul-07-tech</a></p>
   </div>
 </section>
 
 <footer>
-  <p>© 2025 K. V. Raghul | All Rights Reserved</p>
+  <p>© 2025 K. V. Raghul | Built with HTML, CSS & JavaScript</p>
 </footer>
+
+<!-- JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
