--- a/index.html
+++ b/index.html
@@ -43,22 +43,25 @@
       <img src="myphoto.jpeg" alt="Profile photo" class="profile">
     </div>
     <div class="hero-right">
-      <h2>Hello, I'm <span class="accent">K. V. Raghul</span></h2>
+      <h2>Hello! I'm <span class="accent">Raghul</span></h2>
       <p class="tagline">Data Analytics & AI/ML Enthusiast</p>
       <p class="intro">
         I am a Computer Science and Engineering student with a strong foundation in
         <strong>Data Analytics, AI/ML, and Cloud Computing</strong>.
         Skilled in Python, SQL, Power BI, and machine learning,
-        I am passionate about solving real-world problems through data-driven insights.
+        I love solving real-world problems through data-driven insights.
       </p>
 
       <!-- Social Icons -->
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin" style="color: purple;"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/Raghul-07-tech" target="_blank" aria-label="GitHub">
-          <i class="fab fa-github" style="color: black;"></i>
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
+          <i class="fas fa-envelope"></i>
         </a>
       </div>
 
@@ -139,8 +142,14 @@
 <section id="contact" class="section">
   <div class="container">
     <h2 class="section-title">Contact</h2>
-    <p>Email: <a href="mailto:krishnamoorthiraghul123@gmail.com">krishnamoorthiraghul123@gmail.com</a></p>
-    <p>Phone: +91-8838168911</p>
+    <div class="contact-icons">
+      <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
+        <i class="fas fa-envelope"></i> Email Me
+      </a>
+      <a href="tel:+918838168911" aria-label="Phone">
+        <i class="fas fa-phone"></i> +91-8838168911
+      </a>
+    </div>
   </div>
 </section>
 
