--- a/index.html
+++ b/index.html
@@ -17,33 +17,37 @@
 *{margin:0;padding:0;box-sizing:border-box;}
 body{
   font-family:'Poppins',sans-serif;
-  background:#f5f5f5;
-  color:#333;
+  background:#0d0d0d;       /* 🔴⚫ Black background */
+  color:#f5f5f5;
   overflow-x:hidden;
 }
 .container{width:90%;max-width:1100px;margin:auto;}
-header{background:#fff;box-shadow:0 2px 5px rgba(0,0,0,0.1);position:fixed;width:100%;z-index:1000;}
+header{
+  background:#1a1a1a;
+  box-shadow:0 2px 5px rgba(0,0,0,0.4);
+  position:fixed;width:100%;z-index:1000;
+}
 .nav-container{display:flex;justify-content:space-between;align-items:center;padding:15px 0;}
-.logo{font-size:1.6rem;color:#333;font-weight:600;}
+.logo{font-size:1.6rem;color:#ff3b3b;font-weight:600;} /* 🔴 Red accent logo */
 .nav-links{list-style:none;display:flex;gap:20px;}
-.nav-links a{text-decoration:none;color:#333;font-weight:500;transition:.3s;}
-.nav-links a:hover{color:#007bff;}
+.nav-links a{text-decoration:none;color:#f5f5f5;font-weight:500;transition:.3s;}
+.nav-links a:hover{color:#ff3b3b;}
 .section{padding:100px 0;}
-.section-title{text-align:center;margin-bottom:40px;font-size:2rem;font-weight:600;}
-.accent{color:#007bff;}
+.section-title{text-align:center;margin-bottom:40px;font-size:2rem;font-weight:600;color:#ff3b3b;}
+.accent{color:#ff3b3b;}
 .btn{
   display:inline-block;
   padding:12px 30px;
-  background:#007bff;
+  background:#ff3b3b;      /* 🔴 Red button */
   color:#fff;
   border-radius:30px;
   text-decoration:none;
   font-weight:500;
   transition:.3s;
 }
-.btn:hover{background:#0056b3;}
+.btn:hover{background:#d62d2d;}
 /* ----- Hero ----- */
-.hero{background:#fff;padding-top:120px;}
+.hero{background:#0d0d0d;padding-top:120px;}
 .hero-content{
   display:flex;
   align-items:center;
@@ -56,207 +60,22 @@ header{background:#fff;box-shadow:0 2px 5px rgba(0,0,0,0.1);position:fixed;width
   height:280px;
   border-radius:50%;
   object-fit:cover;
-  box-shadow:0 8px 20px rgba(0,0,0,0.15);
+  border:4px solid #ff3b3b; /* 🔴 Red border around photo */
+  box-shadow:0 8px 20px rgba(255,59,59,0.25);
   opacity:0;
   transform:translateY(80px);
 }
 .hero-right{flex:1 1 400px;padding:20px;}
 .hero-right h2{font-size:2.2rem;margin-bottom:10px;opacity:0;transform:translateY(80px);}
-.hero-right .tagline{font-size:1.1rem;color:#555;margin-bottom:20px;opacity:0;transform:translateY(80px);}
-.hero-right .intro{font-size:1rem;line-height:1.6;color:#444;margin-bottom:20px;opacity:0;transform:translateY(80px);}
+.hero-right .tagline{font-size:1.1rem;color:#ccc;margin-bottom:20px;opacity:0;transform:translateY(80px);}
+.hero-right .intro{font-size:1rem;line-height:1.6;color:#ddd;margin-bottom:20px;opacity:0;transform:translateY(80px);}
 .social-icons{display:flex;gap:20px;margin-bottom:20px;}
-.social-icons a{font-size:1.4rem;color:#333;transition:.3s;}
-.social-icons a:hover{color:#007bff;}
+.social-icons a{font-size:1.4rem;color:#f5f5f5;transition:.3s;}
+.social-icons a:hover{color:#ff3b3b;}
 /* ----- Cards & Lists ----- */
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;list-style:none;text-align:center;}
 .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px;}
-.card{background:#fff;padding:20px;border-radius:15px;box-shadow:0 4px 10px rgba(0,0,0,0.08);transition:.3s;}
-.card:hover{transform:translateY(-5px);}
-.contact-icons{display:flex;flex-direction:column;align-items:center;gap:15px;}
-.contact-icons a{color:#333;font-size:1.1rem;text-decoration:none;transition:.3s;}
-.contact-icons a i{margin-right:10px;}
-.contact-icons a:hover{color:#007bff;}
-footer{text-align:center;padding:20px;background:#fff;margin-top:40px;font-size:0.9rem;}
-/* Scroll fade items */
-.fade-item{opacity:0;transform:translateY(40px);}
-</style>
-</head>
-<body>
-
-<!-- ===== HEADER ===== -->
-<header>
-  <div class="container nav-container">
-    <h1 class="logo">K. V. Raghul</h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#certifications">Certifications</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
-<!-- ===== HERO ===== -->
-<section id="about" class="hero section">
-  <div class="container hero-content">
-    <div class="hero-left">
-      <img src="myphoto.jpeg" alt="Profile photo" class="profile">
-    </div>
-    <div class="hero-right">
-      <h2>Hi! I'm <span class="accent">Raghul</span></h2>
-      <p class="tagline">Data Analytics & Cybersecurity Enthusiast</p>
-      <p class="intro">
-        I'm passionate about uncovering insights from data and exploring secure
-        digital solutions. My interests span <strong>data analytics</strong>,
-        <strong>cybersecurity</strong>, and emerging technologies that shape
-        the future of computing.
-      </p>
-
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/Raghul-07-tech" target="_blank" aria-label="GitHub">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
-      </div>
-
-      <a href="#projects" class="btn">View My Work</a>
-    </div>
-  </div>
-</section>
-
-<!-- ===== SKILLS ===== -->
-<section id="skills" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Skills</h2>
-    <ul class="grid">
-      <li>Python, Java, C, C++, SQL</li>
-      <li>Power BI, Data Visualization</li>
-      <li>Machine Learning (Basics)</li>
-      <li>Cloud (AWS, GCP)</li>
-      <li>Flask, OpenCV</li>
-      <li>5G Network Simulation</li>
-      <li>Cybersecurity & Ethical Hacking</li>
-    </ul>
-  </div>
-</section>
-
-<!-- ===== PROJECTS ===== -->
-<section id="projects" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Projects</h2>
-    <div class="cards">
-      <div class="card"><h3>HEALTHSYNC (2025)</h3><p>Cloud-based patient record management using Flask & Google Cloud.</p></div>
-      <div class="card"><h3>5G Session Management</h3><p>Automated UE/gNB control using Flask backend & nr-cli commands.</p></div>
-      <div class="card"><h3>Borewell Rescue System</h3><p>Balloon-assisted mechanism to safely extract children from borewells.</p></div>
-    </div>
-  </div>
-</section>
-
-<!-- ===== EDUCATION ===== -->
-<section id="education" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Education</h2>
-    <p><strong>B.E. Computer Science & Engineering</strong> – Prince Shri Venkateshwara Padmavathy Engineering College, CGPA 8.21 (6th Sem)</p>
-    <p>Class 12 – Shrishti Vidyashram Sr. Sec. School, 72.2% (2022)</p>
-  </div>
-</section>
-
-<!-- ===== CERTIFICATIONS ===== -->
-<section id="certifications" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Certifications</h2>
-    <ul>
-      <li>NPTEL: Design Thinking, Research & Innovation</li>
-      <li>TCS: MasterCraft Data Plus, Career Edge</li>
-      <li>Forage: PwC Power BI, Tata Data Visualization, AWS APAC 2025</li>
-      <li>Oracle: OCI Generative AI 2025</li>
-    </ul>
-  </div>
-</section>
-
-<!-- ===== RESUME ===== -->
-<section id="resume" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Resume</h2>
-    <p>You can view or download my detailed resume below:</p>
-    <a href="KVRaghul_Resume.pdf" target="_blank" class="btn">View / Download Resume</a>
-  </div>
-</section>
-
-<!-- ===== CONTACT ===== -->
-<section id="contact" class="section fade-item">
-  <div class="container">
-    <h2 class="section-title">Contact</h2>
-    <div class="contact-icons">
-      <a href="mailto:krishnamoorthiraghul123@gmail.com"><i class="fas fa-envelope"></i>Email Me</a>
-      <a href="tel:+918838168911"><i class="fas fa-phone"></i>+91-8838168911</a>
-    </div>
-  </div>
-</section>
-
-<footer>
-  <p>© 2025 K. V. Raghul | Built with HTML, CSS & JavaScript</p>
-</footer>
-
-<!-- ===== GSAP Animation ===== -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<script>
-/* --- Hero slide-in like reference site --- */
-window.addEventListener("load", () => {
-  gsap.to(".hero-left img", {
-    duration: 1.2,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-  gsap.to(".hero-right h2", {
-    duration: 1,
-    delay: 0.2,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-  gsap.to(".hero-right .tagline", {
-    duration: 1,
-    delay: 0.4,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-  gsap.to(".hero-right .intro", {
-    duration: 1,
-    delay: 0.6,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-});
-
-/* --- Fade-in sections on scroll --- */
-const fadeItems = document.querySelectorAll(".fade-item");
-fadeItems.forEach(item => gsap.set(item,{opacity:0,y:40}));
-function revealOnScroll(){
-  fadeItems.forEach(item=>{
-    const rect=item.getBoundingClientRect();
-    if(rect.top<window.innerHeight-80 && !item.classList.contains("shown")){
-      item.classList.add("shown");
-      gsap.to(item,{opacity:1,y:0,duration:0.8,ease:"power2.out"});
-    }
-  });
-}
-window.addEventListener("scroll",revealOnScroll);
-revealOnScroll();
-</script>
-
-</body>
-</html>
+.card{
+  background:#1a1a1a;
+  padding:20px;
+  border-radius:
