--- a/index.html
+++ b/index.html
@@ -11,92 +11,17 @@
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- ===== CSS ===== -->
-<style>
-/* ----- General Reset ----- */
-*{margin:0;padding:0;box-sizing:border-box;}
-body{
-  font-family:'Poppins',sans-serif;
-  background:#0d0d0d;       /* 🔴⚫ Black background */
-  color:#f5f5f5;
-  overflow-x:hidden;
-}
-.container{width:90%;max-width:1100px;margin:auto;}
-header{
-  background:#1a1a1a;
-  box-shadow:0 2px 5px rgba(0,0,0,0.4);
-  position:fixed;width:100%;z-index:1000;
-}
-.nav-container{display:flex;justify-content:space-between;align-items:center;padding:15px 0;}
-.logo{font-size:1.6rem;color:#ff3b3b;font-weight:600;} /* 🔴 Red accent logo */
-.nav-links{list-style:none;display:flex;gap:20px;}
-.nav-links a{text-decoration:none;color:#f5f5f5;font-weight:500;transition:.3s;}
-.nav-links a:hover{color:#ff3b3b;}
-.section{padding:100px 0;}
-.section-title{text-align:center;margin-bottom:40px;font-size:2rem;font-weight:600;color:#ff3b3b;}
-.accent{color:#ff3b3b;}
-.btn{
-  display:inline-block;
-  padding:12px 30px;
-  background:#ff3b3b;      /* 🔴 Red button */
-  color:#fff;
-  border-radius:30px;
-  text-decoration:none;
-  font-weight:500;
-  transition:.3s;
-}
-.btn:hover{background:#d62d2d;}
-/* ----- Hero ----- */
-.hero{background:#0d0d0d;padding-top:120px;}
-.hero-content{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  flex-wrap:wrap;
-}
-.hero-left{flex:1 1 350px;text-align:center;}
-.hero-left img{
-  width:280px;
-  height:280px;
-  border-radius:50%;
-  object-fit:cover;
-  border:4px solid #ff3b3b; /* 🔴 Red border around photo */
-  box-shadow:0 8px 20px rgba(255,59,59,0.25);
-  opacity:0;
-  transform:translateY(80px);
-}
-.hero-right{flex:1 1 400px;padding:20px;}
-.hero-right h2{font-size:2.2rem;margin-bottom:10px;opacity:0;transform:translateY(80px);}
-.hero-right .tagline{font-size:1.1rem;color:#ccc;margin-bottom:20px;opacity:0;transform:translateY(80px);}
-.hero-right .intro{font-size:1rem;line-height:1.6;color:#ddd;margin-bottom:20px;opacity:0;transform:translateY(80px);}
-.social-icons{display:flex;gap:20px;margin-bottom:20px;}
-.social-icons a{font-size:1.4rem;color:#f5f5f5;transition:.3s;}
-.social-icons a:hover{color:#ff3b3b;}
-/* ----- Cards & Lists ----- */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;list-style:none;text-align:center;}
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px;}
-.card{
-  background:#1a1a1a;
-  padding:20px;
-  border-radius:15px;
-  box-shadow:0 4px 10px rgba(0,0,0,0.5);
-  transition:.3s;
-}
-.card:hover{transform:translateY(-5px);}
-.contact-icons{display:flex;flex-direction:column;align-items:center;gap:15px;}
-.contact-icons a{color:#f5f5f5;font-size:1.1rem;text-decoration:none;transition:.3s;}
-.contact-icons a i{margin-right:10px;}
-.contact-icons a:hover{color:#ff3b3b;}
-footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-size:0.9rem;color:#aaa;}
-.fade-item{opacity:0;transform:translateY(40px);}
-</style>
+<!-- CSS -->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- ===== HEADER ===== -->
 <header>
   <div class="container nav-container">
-    <h1 class="logo">K. V. Raghul</h1>
+    <div class="logo-box">
+      <h1 class="logo">K. V. Raghul</h1>
+    </div>
     <nav>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -114,6 +39,7 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
 <!-- ===== HERO ===== -->
 <section id="about" class="hero section">
   <div class="container hero-content">
+    <!-- ✅ Removed fade-item so it animates on load, not scroll -->
     <div class="hero-left">
       <img src="myphoto.jpeg" alt="Profile photo" class="profile">
     </div>
@@ -127,6 +53,7 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
         the future of computing.
       </p>
 
+      <!-- Social Icons -->
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/k-v-raghul-875489340" target="_blank" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
@@ -161,13 +88,22 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
 </section>
 
 <!-- ===== PROJECTS ===== -->
-<section id="projects" class="section fade-item">
+<section id="projects" class="section alt fade-item">
   <div class="container">
     <h2 class="section-title">Projects</h2>
     <div class="cards">
-      <div class="card"><h3>HEALTHSYNC (2025)</h3><p>Cloud-based patient record management using Flask & Google Cloud.</p></div>
-      <div class="card"><h3>5G Session Management</h3><p>Automated UE/gNB control using Flask backend & nr-cli commands.</p></div>
-      <div class="card"><h3>Borewell Rescue System</h3><p>Balloon-assisted mechanism to safely extract children from borewells.</p></div>
+      <div class="card">
+        <h3>HEALTHSYNC (2025)</h3>
+        <p>Cloud-based patient record management using Flask & Google Cloud.</p>
+      </div>
+      <div class="card">
+        <h3>5G User Session Management (2025)</h3>
+        <p>Automated UE/gNB session control using Flask backend and nr-cli commands.</p>
+      </div>
+      <div class="card">
+        <h3>Borewell Rescue System (2023)</h3>
+        <p>Balloon-assisted mechanism to safely extract children from borewells.</p>
+      </div>
     </div>
   </div>
 </section>
@@ -182,7 +118,7 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
 </section>
 
 <!-- ===== CERTIFICATIONS ===== -->
-<section id="certifications" class="section fade-item">
+<section id="certifications" class="section alt fade-item">
   <div class="container">
     <h2 class="section-title">Certifications</h2>
     <ul>
@@ -195,7 +131,7 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
 </section>
 
 <!-- ===== RESUME ===== -->
-<section id="resume" class="section fade-item">
+<section id="resume" class="section alt fade-item">
   <div class="container">
     <h2 class="section-title">Resume</h2>
     <p>You can view or download my detailed resume below:</p>
@@ -208,8 +144,12 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
   <div class="container">
     <h2 class="section-title">Contact</h2>
     <div class="contact-icons">
-      <a href="mailto:krishnamoorthiraghul123@gmail.com"><i class="fas fa-envelope"></i>Email Me</a>
-      <a href="tel:+918838168911"><i class="fas fa-phone"></i>+91-8838168911</a>
+      <a href="mailto:krishnamoorthiraghul123@gmail.com" aria-label="Email">
+        <i class="fas fa-envelope"></i> Email Me
+      </a>
+      <a href="tel:+918838168911" aria-label="Phone">
+        <i class="fas fa-phone"></i> +91-8838168911
+      </a>
     </div>
   </div>
 </section>
@@ -218,51 +158,38 @@ footer{text-align:center;padding:20px;background:#1a1a1a;margin-top:40px;font-si
   <p>© 2025 K. V. Raghul | Built with HTML, CSS & JavaScript</p>
 </footer>
 
-<!-- ===== GSAP Animation ===== -->
+<!-- ===== GSAP ===== -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script>
-window.addEventListener("load", () => {
-  gsap.to(".hero-left img", {
-    duration: 1.2,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
+  // ✅ Animate hero photo & text immediately on page load
+  gsap.from(".hero-left", {
+    duration: 1.0,
+    x: -60,
+    opacity: 0,
+    ease: "power3.out"
   });
-  gsap.to(".hero-right h2", {
-    duration: 1,
-    delay: 0.2,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
+  gsap.from(".hero-right", {
+    duration: 1.0,
+    x: 60,
+    opacity: 0,
+    ease: "power3.out"
   });
-  gsap.to(".hero-right .tagline", {
-    duration: 1,
-    delay: 0.4,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-  gsap.to(".hero-right .intro", {
-    duration: 1,
-    delay: 0.6,
-    y: 0,
-    opacity: 1,
-    ease: "power4.out"
-  });
-});
-const fadeItems = document.querySelectorAll(".fade-item");
-fadeItems.forEach(item => gsap.set(item,{opacity:0,y:40}));
-function revealOnScroll(){
-  fadeItems.forEach(item=>{
-    const rect=item.getBoundingClientRect();
-    if(rect.top<window.innerHeight-80 && !item.classList.contains("shown")){
-      item.classList.add("shown");
-      gsap.to(item,{opacity:1,y:0,duration:0.8,ease:"power2.out"});
-    }
-  });
-}
-window.addEventListener("scroll",revealOnScroll);
-revealOnScroll();
+
+  // Fade in other sections on scroll
+  const fadeItems = document.querySelectorAll(".fade-item");
+  fadeItems.forEach(item => gsap.set(item, {opacity: 0, y: 40}));
+
+  const revealOnScroll = () => {
+    fadeItems.forEach(item => {
+      const rect = item.getBoundingClientRect();
+      if (rect.top < window.innerHeight - 100 && !item.classList.contains("shown")) {
+        item.classList.add("shown");
+        gsap.to(item, {opacity: 1, y: 0, duration: 0.8, ease: "power2.out"});
+      }
+    });
+  };
+  window.addEventListener("scroll", revealOnScroll);
+  revealOnScroll(); // run once on load
 </script>
 
 </body>
